WIP start Convert to ES2015
WARNING Karma integration needs more work

--- a/app/phone-detail/phone-detail.template.html
+++ b/app/phone-detail/phone-detail.template.html
@@ -6,6 +6,8 @@
 
 <h1>{{$ctrl.phone.name}}</h1>
 
+<style>.ng-valid { border-color: green; }</style>
+
 <p>{{$ctrl.phone.description}}</p>
 
 <ul class="phone-thumbs">
