WIP Input field start

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <script src="phone-list/phone-list.component.js"></script>
     <script src="phone-detail/phone-detail.module.js"></script>
     <script src="phone-detail/phone-detail.component.js"></script>
+    <script src="core/fields/input-field.js"></script>
   </head>
   <body>
 
